--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="searchBtnText">Suchen</string>
     <string name="location_input">Gib den Ort ein</string>
     <string name="location_find_btn">Ort finden</string>
+    <string name="clearallbutt">Alle Einträge löschen</string>
 
 </resources>
