--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,19 +19,21 @@
     <!-- Strings related to Create. -->
     <string name="create_activity_title">Eintrag bearbeiten</string>
     <string name="create_editTextHint_title">Gib den Titel deines Eintrages ein!</string>
-    <string name="create_editTextHint_desc">Was ist heute so passiert?</string>
+    <string name="create_editTextHint_entryDesc">Was ist heute so passiert?</string>
     <!--ToDo: No usages-->
     <string name="create_textView_selectImage">Wähle ein Bild aus.</string>
     <string name="create_editText_location">Gib den Ort ein.</string>
     <string name="create_imageButton_locationFinder">Ort finden</string>
     <string name="create_textView_moodSelect">Wie ist deine aktuelle Stimmung?</string>
     <!--ToDo: No usages-->
-    <string name="create_Entry_btn">Eintrag erstellen</string>
+    <string name="create_entrySaved">Eintrag gespeichert!</string>
+
 
     <!-- Strings related to Toolbars. -->
     <string name="toolbar_edit">Eintrag bearbeiten</string>
     <string name="toolbar_clearAll">Alle Einträge löschen</string>
     <string name="toolbar_clearThis">Eintrag löschen</string>
+    <string name="toolbar_done">Eintrag speichern</string>
 
     <!-- Strings related to Search. -->
     <string name="search_activity_title">Suche</string>
